--- a/index.html
+++ b/index.html
@@ -2,204 +2,299 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>פרויקט מסדי נתונים – ספרייה</title>
+
+  <!-- אם יש לך style.css בתיקיה – זה יפעל -->
   <link rel="stylesheet" href="style.css" />
+
+  <!-- אם אין/לא עובד CSS – זה מינימום עיצוב פנימי -->
+  <style>
+    :root{
+      --glass: rgba(20, 26, 40, .55);
+      --border: rgba(255,255,255,.18);
+      --text: rgba(255,255,255,.92);
+      --muted: rgba(255,255,255,.70);
+      --shadow: 0 18px 60px rgba(0,0,0,.45);
+      --radius: 18px;
+    }
+    *{ box-sizing:border-box; }
+    html,body{ height:100%; }
+    body{
+      margin:0;
+      color:var(--text);
+      font-family: system-ui, -apple-system, "Segoe UI", Arial;
+      background:
+        linear-gradient(rgba(10,12,18,.35), rgba(10,12,18,.35)),
+        url("bg-book.jpg");
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+    }
+    .wrap{ max-width:1100px; margin:0 auto; padding:28px 18px 40px; }
+    .header{
+      text-align:center;
+      margin-bottom:18px;
+    }
+    .header h1{
+      margin:0 0 8px;
+      font-size:40px;
+      font-weight:800;
+      letter-spacing:.3px;
+      text-shadow: 0 10px 30px rgba(0,0,0,.55);
+    }
+    .header .sub{
+      margin:0;
+      color:var(--muted);
+      font-size:14px;
+    }
+    .grid{
+      display:grid;
+      grid-template-columns: 1fr;
+      gap:16px;
+      margin-top:16px;
+    }
+    @media (min-width: 900px){
+      .grid{ grid-template-columns: 360px 1fr; }
+    }
+    .card{
+      background: var(--glass);
+      border:1px solid var(--border);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      backdrop-filter: blur(10px);
+      padding:16px;
+    }
+    .card h2{
+      margin:0 0 12px;
+      font-size:18px;
+    }
+    .row{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      align-items:center;
+      margin-bottom:10px;
+    }
+    input, select, button{
+      border-radius: 12px;
+      border:1px solid rgba(255,255,255,.20);
+      background: rgba(0,0,0,.20);
+      color: var(--text);
+      padding:10px 12px;
+      outline:none;
+    }
+    input::placeholder{ color: rgba(255,255,255,.55); }
+    button{
+      cursor:pointer;
+      font-weight:700;
+      background: rgba(255,255,255,.12);
+    }
+    button:hover{ background: rgba(255,255,255,.18); }
+    .status{
+      margin-top:8px;
+      color: var(--muted);
+      font-size:13px;
+      min-height:18px;
+    }
+    table{
+      width:100%;
+      border-collapse: collapse;
+      overflow:hidden;
+      border-radius: 14px;
+    }
+    thead th{
+      text-align:right;
+      font-size:13px;
+      color: rgba(255,255,255,.78);
+      padding:12px 10px;
+      border-bottom:1px solid rgba(255,255,255,.14);
+      background: rgba(255,255,255,.06);
+    }
+    tbody td{
+      padding:12px 10px;
+      border-bottom:1px solid rgba(255,255,255,.08);
+      font-size:14px;
+    }
+    tbody tr:hover{ background: rgba(255,255,255,.05); }
+    .footer{
+      text-align:center;
+      margin-top:18px;
+      color: rgba(255,255,255,.55);
+      font-size:13px;
+    }
+  </style>
 </head>
 
 <body>
-  <header class="hero">
-    <div class="hero__inner">
+  <div class="wrap">
+    <div class="header">
       <h1>פרויקט מסדי נתונים – ספרייה</h1>
-      <p class="subtitle">
-        דף תצוגה ל־<b>“רשימת ספרים”</b> מתוך <code>books.json</code> (מיוצא מה־SQL).
-      </p>
-
-      <div class="meta">
-        <span class="pill">מסד נתונים: <b>final_project</b></span>
-        <span class="pill">משתתפות: <b>שירה</b>, <b>הודיה</b></span>
-      </div>
+      <p class="sub">הנתונים נטענים ישירות מ־MySQL דרך API (עדכון ב־SQL ⇒ עדכון בתצוגה)</p>
     </div>
-  </header>
 
-  <main class="container">
+    <div class="grid">
+      <!-- חיפוש / מיון -->
+      <div class="card">
+        <h2>חיפוש ומיון</h2>
 
-    <section class="card">
-      <h2 class="card__title">חיפוש ומיון</h2>
+        <div class="row">
+          <input id="search" type="text" placeholder="חיפוש לפי שם ספר / מזהה..." style="flex:1; min-width:180px;">
+        </div>
 
-      <div class="controls">
-        <label class="field">
-          <span>חיפוש לפי כותר / מזהה:</span>
-          <input id="search" type="text" placeholder="לדוגמה: 1001 או Databases" />
-        </label>
-
-        <label class="field">
-          <span>מיון:</span>
-          <select id="sort">
-            <option value="id_asc">מזהה ↑</option>
-            <option value="id_desc">מזהה ↓</option>
-            <option value="title_asc">כותר ↑</option>
-            <option value="title_desc">כותר ↓</option>
-            <option value="price_asc">מחיר ↑</option>
-            <option value="price_desc">מחיר ↓</option>
-            <option value="pages_asc">עמודים ↑</option>
-            <option value="pages_desc">עמודים ↓</option>
+        <div class="row">
+          <select id="sort" style="flex:1; min-width:180px;">
+            <option value="id_asc">מיון: מזהה עולה</option>
+            <option value="id_desc">מיון: מזהה יורד</option>
+            <option value="title_asc">מיון: כותרת א-ת</option>
+            <option value="title_desc">מיון: כותרת ת-א</option>
+            <option value="price_asc">מיון: מחיר עולה</option>
+            <option value="price_desc">מיון: מחיר יורד</option>
           </select>
-        </label>
+        </div>
 
-        <div class="actions">
-          <button id="load" class="btn btn--primary">טעינת ספרים</button>
-          <button id="clear" class="btn">ניקוי</button>
+        <div class="row">
+          <button id="reload">רענון</button>
+          <button id="clear">ניקוי</button>
+        </div>
+
+        <div id="status" class="status"></div>
+      </div>
+
+      <!-- טבלה -->
+      <div class="card">
+        <div class="row" style="justify-content:space-between;">
+          <h2 style="margin:0;">Books</h2>
+          <span class="status" id="count"></span>
+        </div>
+
+        <div style="overflow:auto;">
+          <table>
+            <thead>
+              <tr>
+                <th>product_id</th>
+                <th>title</th>
+                <th>number_of_pages</th>
+                <th>author_id</th>
+                <th>price</th>
+              </tr>
+            </thead>
+            <tbody id="books-body">
+              <tr><td colspan="5" style="color:rgba(255,255,255,.65);">טוען נתונים...</td></tr>
+            </tbody>
+          </table>
         </div>
       </div>
+    </div>
 
-      <p class="hint">
-        כדי “לסנכרן” עם ה־SQL: מריצים שאילתת SELECT ב-MySQL, מייצאים לתוצאה, ומדביקים/שומרים אותה ב־<code>books.json</code>.
-      </p>
-    </section>
+    <div class="footer">© Library Database Project — Shira & Hodaya</div>
+  </div>
 
-    <section class="card">
-      <div class="card__head">
-        <h2 class="card__title">רשימת ספרים</h2>
-        <div class="counter" id="counter">מוצגים: 0</div>
-      </div>
+  <script>
+    // כתובת ה-API (את כבר רואה שזה עובד בדפדפן)
+    const API_URL = "http://localhost:3000/api/books";
 
-      <div class="tableWrap">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>מזהה</th>
-              <th>כותר</th>
-              <th>עמודים</th>
-              <th>מזהה סופר</th>
-              <th>מחיר</th>
-            </tr>
-          </thead>
-          <tbody id="rows">
-            <tr>
-              <td colspan="5" class="empty">לחצי על “טעינת ספרים”.</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+    let allBooks = [];
 
-      <div id="status" class="status"></div>
-    </section>
+    const elBody = document.getElementById("books-body");
+    const elStatus = document.getElementById("status");
+    const elCount = document.getElementById("count");
+    const elSearch = document.getElementById("search");
+    const elSort = document.getElementById("sort");
+    const btnReload = document.getElementById("reload");
+    const btnClear = document.getElementById("clear");
 
-  </main>
-
-  <footer class="footer">
-    © Library Database Project — Shira & Hodaya
-  </footer>
-
-<script>
-  const loadBtn = document.getElementById("load");
-  const clearBtn = document.getElementById("clear");
-  const searchEl = document.getElementById("search");
-  const sortEl = document.getElementById("sort");
-  const rowsEl = document.getElementById("rows");
-  const statusEl = document.getElementById("status");
-  const counterEl = document.getElementById("counter");
-
-  let books = [];
-
-  function normBook(x) {
-    // תומך בכמה שמות שדות אפשריים כדי שלא תתקעי
-    return {
-      product_id: Number(x.product_id ?? x.book_id ?? x.id ?? x.productId),
-      title: String(x.title ?? x.book_title ?? x.name ?? ""),
-      pages: Number(x.pages ?? x.number_of_pages ?? x.num_pages ?? 0),
-      author_id: Number(x.author_id ?? x.authorId ?? x.author ?? 0),
-      price: Number(x.price ?? x.book_price ?? 0)
-    };
-  }
-
-  function escapeHtml(s) {
-    return String(s).replace(/[&<>"']/g, m => ({
-      "&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#39;"
-    }[m]));
-  }
-
-  function render(list) {
-    counterEl.textContent = `מוצגים: ${list.length}`;
-
-    if (!list.length) {
-      rowsEl.innerHTML = `<tr><td colspan="5" class="empty">אין נתונים להצגה.</td></tr>`;
-      return;
+    function escapeHtml(s) {
+      return String(s).replace(/[&<>"']/g, ch => ({
+        "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;"
+      }[ch]));
     }
 
-    rowsEl.innerHTML = list.map(b => `
-      <tr>
-        <td>${Number.isFinite(b.product_id) ? b.product_id : ""}</td>
-        <td>${escapeHtml(b.title)}</td>
-        <td>${Number.isFinite(b.pages) ? b.pages : ""}</td>
-        <td>${Number.isFinite(b.author_id) ? b.author_id : ""}</td>
-        <td>${Number.isFinite(b.price) ? b.price : ""}</td>
-      </tr>
-    `).join("");
-  }
+    function render(list) {
+      elBody.innerHTML = "";
+      if (!list.length) {
+        elBody.innerHTML = `<tr><td colspan="5" style="color:rgba(255,255,255,.65);">אין נתונים להצגה</td></tr>`;
+        elCount.textContent = "0 ספרים";
+        return;
+      }
 
-  function applyFilters() {
-    const q = searchEl.value.trim().toLowerCase();
-    let filtered = [...books];
-
-    if (q) {
-      filtered = filtered.filter(b =>
-        String(b.product_id).includes(q) ||
-        b.title.toLowerCase().includes(q)
-      );
+      for (const b of list) {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${escapeHtml(b.product_id)}</td>
+          <td>${escapeHtml(b.title)}</td>
+          <td>${escapeHtml(b.number_of_pages)}</td>
+          <td>${escapeHtml(b.author_id)}</td>
+          <td>${escapeHtml(b.price)}</td>
+        `;
+        elBody.appendChild(tr);
+      }
+      elCount.textContent = `${list.length} ספרים`;
     }
 
-    const sort = sortEl.value;
-    const cmpNum = (a, b, key, dir) => (a[key] - b[key]) * dir;
-    const cmpStr = (a, b, key, dir) => a[key].localeCompare(b[key], "he") * dir;
+    function applyFilters() {
+      const q = elSearch.value.trim().toLowerCase();
+      const sort = elSort.value;
 
-    switch (sort) {
-      case "id_asc":    filtered.sort((a,b)=>cmpNum(a,b,"product_id", 1)); break;
-      case "id_desc":   filtered.sort((a,b)=>cmpNum(a,b,"product_id",-1)); break;
-      case "title_asc": filtered.sort((a,b)=>cmpStr(a,b,"title", 1)); break;
-      case "title_desc":filtered.sort((a,b)=>cmpStr(a,b,"title",-1)); break;
-      case "price_asc": filtered.sort((a,b)=>cmpNum(a,b,"price", 1)); break;
-      case "price_desc":filtered.sort((a,b)=>cmpNum(a,b,"price",-1)); break;
-      case "pages_asc": filtered.sort((a,b)=>cmpNum(a,b,"pages", 1)); break;
-      case "pages_desc":filtered.sort((a,b)=>cmpNum(a,b,"pages",-1)); break;
+      let list = allBooks.slice();
+
+      // filter
+      if (q) {
+        list = list.filter(b =>
+          String(b.product_id).includes(q) ||
+          String(b.title).toLowerCase().includes(q)
+        );
+      }
+
+      // sort
+      list.sort((a,b) => {
+        const idA = Number(a.product_id), idB = Number(b.product_id);
+        const priceA = Number(a.price), priceB = Number(b.price);
+
+        if (sort === "id_asc") return idA - idB;
+        if (sort === "id_desc") return idB - idA;
+
+        if (sort === "title_asc") return String(a.title).localeCompare(String(b.title));
+        if (sort === "title_desc") return String(b.title).localeCompare(String(a.title));
+
+        if (sort === "price_asc") return priceA - priceB;
+        if (sort === "price_desc") return priceB - priceA;
+
+        return 0;
+      });
+
+      render(list);
     }
 
-    render(filtered);
-  }
+    async function loadBooks() {
+      elStatus.textContent = "טוען נתונים מהשרת...";
+      try {
+        const res = await fetch(API_URL, { cache: "no-store" });
+        if (!res.ok) throw new Error("HTTP " + res.status);
 
-  loadBtn.addEventListener("click", async () => {
-    statusEl.textContent = "טוען books.json...";
-    try {
-      // חשוב: אותו תיקייה כמו index.html
-      const res = await fetch("./books.json", { cache: "no-store" });
-      if (!res.ok) throw new Error("לא הצלחתי להוריד את books.json (בדקי שם/מיקום).");
-      const data = await res.json();
+        allBooks = await res.json();
+        elStatus.textContent = "הנתונים נטענו בהצלחה ✔";
+        applyFilters();
+      } catch (err) {
+        console.error(err);
+        elStatus.textContent = "שגיאה בטעינת נתונים. ודאי שהשרת רץ (node app.js) ושזה הכתובת הנכונה.";
+        elBody.innerHTML = `<tr><td colspan="5" style="color:rgba(255,255,255,.65);">שגיאה בטעינה</td></tr>`;
+        elCount.textContent = "";
+      }
+    }
 
-      // תומך גם אם זה מערך וגם אם זה {books:[...]}
-      const arr = Array.isArray(data) ? data : (data.books ?? []);
-      books = arr.map(normBook).filter(b => b.title || Number.isFinite(b.product_id));
-
-      statusEl.textContent = `נטענו ${books.length} ספרים.`;
+    // events
+    btnReload.addEventListener("click", loadBooks);
+    btnClear.addEventListener("click", () => {
+      elSearch.value = "";
+      elSort.value = "id_asc";
       applyFilters();
-    } catch (e) {
-      books = [];
-      render([]);
-      statusEl.textContent = "שגיאה: " + e.message;
-    }
-  });
+    });
+    elSearch.addEventListener("input", applyFilters);
+    elSort.addEventListener("change", applyFilters);
 
-  clearBtn.addEventListener("click", () => {
-    books = [];
-    searchEl.value = "";
-    sortEl.value = "id_asc";
-    statusEl.textContent = "";
-    counterEl.textContent = "מוצגים: 0";
-    rowsEl.innerHTML = `<tr><td colspan="5" class="empty">לחצי על “טעינת ספרים”.</td></tr>`;
-  });
-
-  searchEl.addEventListener("input", applyFilters);
-  sortEl.addEventListener("change", applyFilters);
-</script>
+    // init
+    loadBooks();
+  </script>
 </body>
 </html>
